<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:id="@+id/view_login_progress"
                  android:visibility="gone"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:gravity="center_horizontal"
                  android:orientation="vertical">
        <ProgressBar style="?android:attr/progressBarStyleLarge"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"/>
        <TextView
                android:id="@+id/text_progress"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:fontFamily="sans-serif-light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/signing_in"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/view_login_form"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/edit_address" android:hint="@string/address_hint"
                android:layout_margin="10dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/edit_password" android:hint="@string/password"
                android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginBottom="10dp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@android:string/cancel"
                    android:id="@+id/btn_cancel"
                    android:layout_weight="1" android:layout_margin="10dp"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:id="@+id/btn_login" android:layout_weight="1" android:layout_margin="10dp"/>
        </LinearLayout>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_resource"
                android:hint="@string/resource_hint" android:layout_margin="10dp"/>
    </LinearLayout>
</merge>